2013-07-26  Tassilo Horn  <tsdh@gnu.org>

	* gnus-sum.el (gnus-sort-threads-recursively): New defcustom.
	(gnus-sort-threads): Use it.

2013-07-25  Andreas Schwab  <schwab@linux-m68k.org>

	* gnus-art.el (gnus-button-url-regexp): Make it match url in which
	punctuation characters follow parentheses (bug#14950).

2013-07-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus.el (gnus-continuum-version):
	* gnus-msg.el (gnus-extended-version): Simplify.

	* gnus.el (gnus-continuum-version-1): Remove.
	* gnus-msg.el (gnus-bug): Revert.

	Calculate gnus-version correctly on Cygwin.

	* gnus.el (gnus-continuum-version): Do main calculations in integers.
	(gnus-continuum-version-1): New function, return a string.

	* gnus-msg.el (gnus-extended-version, gnus-bug):
	Use gnus-continuum-version-1 instead of gnus-continuum-version.

2013-07-19  Geoff Kuenning  <geoff@cs.hmc.edu>  (tiny change)

	* gnus-art.el (gnus-treat-predicate): Allow functions as predicates
	(bug#13384).

2013-07-18  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-start.el (gnus-clean-old-newsrc): Remove the newsrc cleanups
	that were only relevant in a development version a long time ago.

2013-07-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-shr-put-image): Make it work as well for shr.el's
	that the old Emacs 24s bundle.

2013-07-10  David Engster  <deng@randomsample.de>

	* gnus-start.el (gnus-clean-old-newsrc): Always remove 'unexist' marks
	if `gnus-newsrc-file-version' does not match `gnus-version'.  This
	fixes a bug in Emacs trunk where the 'unexist' marks were always
	removed at startup because "Gnus v5.13" was considered smaller than "Ma
	Gnus v0.03".

2013-07-10  Tassilo Horn  <tsdh@gnu.org>

	* gnus.el (gnus-summary-line-format): Reference
	`gnus-user-date-format-alist' for the &user-date; format, not
	`gnus-summary-user-date-format-alist'.

2013-07-08  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnml.el (nnml-request-compact-group): Don't bug out if we can't